<resources>
    <string name="app_name" >NoteManagement</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Category</string>
    <string name="menu_slideshow">Priority</string>
    <string name="menu_status">Status</string>
    <string name="menu_note">Note</string>
    <string name="menu_editprofile">Edit Profile</string>
    <string name="menu_changepassword">Change Password</string>

    <!--    title dialog-->
    <string name="tt_signup_fail">Sign up fail</string>
    <string name="tt_changepassword_fail">Change password fail</string>

    <!--    dialog message-->
    <string name="msg_password_notmatch">Password and confirm password does not match</string>
    <string name="msg_email_exist">Email is existed</string>
    <string name="msg_password_incorrect">Password incorrect</string>
    <string name="msg_positive_message">OK</string>
    <string name="msg_strong_password">Password should contain min of 4 characters and at least 1 lowercase, 1 uppercase, 1 numeric and 1 special character value</string>

    <!--    validation edit text-->
    <string name="validate_email">Email is required!</string>
    <string name="validate_password">Password is required!</string>
    <string name="validate_first_name">First name is required!</string>
    <string name="validate_last_name">Last name is required!</string>

</resources>