<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_priority"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Priority" />
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_menu_status_24"
            android:title="@string/menu_status" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_menu_status_24"
            android:title="@string/menu_note" />

    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_editprofile"
                android:icon="@drawable/ic_baseline_editrofile_24"
                android:title="@string/menu_editprofile" />
            <item
                android:id="@+id/nav_changepassword"
                android:icon="@drawable/ic_baseline_changepass"
                android:title="Change Password" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_changepass"
                android:title="Log out"/>
        </menu>
    </item>
</menu>